--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,9 +27,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>프로필 사진을 찍기 위해 카메라 접근 권한이 필요합니다.</string>
+	<string>프로필/영수증 사진을 찍어 불러오기 위해 카메라 접근 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>프로필 사진을 변경하기 위해 갤러리 접근 권한이 필요합니다.</string>
+	<string>프로필/영수증 사진을 불러오기 위해 사진 보관함 접근 권한이 필요합니다.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
